@@ -38,6 +38,7 @@ All:
 - Implemented background colour in wxRichTextCtrl.
 - Fixed crashes in helpview when opening a file.
 - Added wxMutex::LockTimeout() (Aleksandr Napylov)
+- Set locale to the default in all ports, not just wxGTK
 
 wxGTK:
 
